# gpt-chat

./: .env  Cargo.toml  _typos.toml  app.yml  cliff.toml
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  chat.yml  test.rest
chat_server/fixtures/: decoding.pem  encoding.pem  test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml
chat_test/tests/: chat.rs
migrations/: 20250223105727_initial.sql  20250302163124_workspace.sql  20250317092745_triggers.sql
notify_server/: Cargo.toml  index.html  notify.yml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
src/: main.rs
