[workspace]
members = ["chat_server", "chat_core", "notify_server", "chat_test"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["http2", "query", "tracing", "multipart"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.39", features = ["serde"] }
jwt-simple = "0.12.11"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-full", "request-id", "trace", "cors"] }
uuid = { version = "1.15.1", features = ["v7"] }


chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
notify-server = { path = "./notify_server" }
