[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { workspace = true }
hex = "0.4.3"
jwt-simple = { workspace = true }
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = "1.0.139"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sha2 = "0.10.8"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

chat-core = { path = "../chat_core" }

[dev-dependencies]
http-body-util = "0.1.2"
sqlx-db-tester = "0.5.0"
