[package]
name = "chat_test"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
chat-core = { workspace = true }
chat-server = { workspace = true, features = ["test-util"] }
notify-server = { workspace = true }


anyhow = { workspace = true }
axum = { workspace = true }
reqwest = { version = "0.12.4", default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream",
] }
reqwest-eventsource = "0.6.0"
serde = { workspace = true }
serde_json = "1.0.116"
tokio = { workspace = true }
futures = "0.3.31"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
