[package]
name = "notify_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
futures = "0.3.31"
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.17"
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
